fix: 修复全局样式中 body 的变量定义，移除多余的 overflow-hidden

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -6,7 +6,7 @@ html {
   }
 
   body {
-    --uno: text-3.5 overflow-hidden;
+    --uno: text-3.5;
 
     img {
       -webkit-user-drag: none;
